--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-MODEL: "OpenAI"  # The type of multi-modal LLM you would like to use to power the AppAgent, must be either OpenAI or Qwen
+MODEL: "Qwen"  # The type of multi-modal LLM you would like to use to power the AppAgent, must be either OpenAI or Qwen
 
 OPENAI_API_BASE: "https://api.openai.com/v1/chat/completions"
 OPENAI_API_KEY: "sk-"  # Set the value to sk-xxx if you host the openai interface for open llm model
@@ -7,7 +7,7 @@ MAX_TOKENS: 300  # The max token limit for the response completion
 TEMPERATURE: 0.0  # The temperature of the model: the lower the value, the more consistent the output of the model
 REQUEST_INTERVAL: 10  # Time in seconds between consecutive GPT-4V requests
 
-DASHSCOPE_API_KEY: "sk-"  # The dashscope API key that gives you access to Qwen-VL model
+DASHSCOPE_API_KEY: "sk-57c4673cf1e84c9795d7edc47a18f981"  # The dashscope API key that gives you access to Qwen-VL model
 QWEN_MODEL: "qwen-vl-max"
 
 ANDROID_SCREENSHOT_DIR: "/sdcard"  # Set the directory on your Android device to store the intermediate screenshots. Make sure the directory EXISTS on your phone!
